# stock_price_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: eda.ipynb  preprocessing.ipynb  test.ipynb
src/configuration/: config.py
src/data/ingestion/: collect_news.py  download_data.py
src/data/processing/: generate_signal.py  process_data.py
src/data/sentiment/: llm.py
src/models/: lstm.py  others.py  request_model.py  wrappers.py
src/monitoring/: production_monitor.py
src/orchestration/airflow/dags/: monitoring_dag.py  retraining_dag.py
src/scripts/: download_data.py  process_data.py  train_model.py
src/training/: build_model.py  parameters.json  retrain_pipeline.py  train_candidate.py  train_production.py
src/utils/: logger.py  split_train_test.py  test_model.py
