[project]
name = "apple-stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.6",
    "fastparquet>=2026.3.0",
    "flask>=3.1.3",
    "mlflow-skinny==2.13.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "sagemaker-mlflow>=0.4.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "waitress>=3.0.2",
    "yfinance>=0.2.61",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
download-update-data = "scripts.download_data:download_update_data"
process-data = "scripts.process_data:main"
train-model = "scripts.build_model:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "training*", "scripts*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
