[project]
name = "apple-stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.6",
    "boto3>=1.43.6",
    "fastparquet>=2026.3.0",
    "flask>=3.1.3",
    "mlflow-skinny==2.13.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "sagemaker-mlflow>=0.4.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "waitress>=3.0.2",
    "yfinance>=0.2.61",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
download-update-data = "data.ingestion.download_data:main"
process-data = "data.processing.process_data:main"
train-candidates = "training.train_candidate:main"
train-production = "training.train_production:main"
retrain-pipeline = "training.retrain_pipeline:main"
production-monitor = "monitoring.production_monitor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "training*", "data*", "monitoring*", "models*", "utils*", "configuration*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
